# snakespasm

./: .gitignore  CMakeLists.txt  CMakePresets.json  shpargalka.txt
.github/workflows/: windows.yml
runtime/id1/pyprogs/: __init__.py
runtime/id1/scripts/: start.py
runtime/pyq/pyprogs/: __init__.py  entity.py  entitymanager.py  player.py  world.py
src/: console.c  console.h  host.c  keys.c  pr_edict.c  pr_exec.c  pyq_builtins.c  pyquake.c  pyquake.h  quakedef.h  sv_main.c  sv_phys.c  world.c
